# arxbot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: config.json.example  settings.py
migrations/: 001_add_guild_id_to_api_key.py  002_add_composite_unique_constraint.py  003_recreate_member_table.py  004_add_composite_unique_constraints_username.py  005_recreate_members_username.py  006_add_leaderboard_enabled_to_api_keys.py  007_add_guild_names_to_apikey.py  007_add_permissions_to_api_keys.py
scripts/: populate_guild_names.py
src/: .helpers.py.swp  authorization.py  db_viewer.py  gw2_api_client.py  helpers.py
src/cogs/: add_key_cog.py  admin_check_cog.py  admin_cog.py  admin_guild_lookup_cog.py  admin_lookup.py  admin_manual_relink_cog.py  admin_relink_cog.py  admin_validate_api_cog.py  check_cog.py  config_cog.py  funderboard_cog.py  keys_cog.py  leaderboard_cog.py  preferred_guild_cog.py  raid_notification_cog.py  remove_key_cog.py  search_cog.py  stats_cog.py  tmp_voice_cog.py  verify_cog.py
src/lib/: api_key_processor.py  logger.py  smart_embed.py
src/models/: api_key.py  base_model.py  config.py  guild.py  member.py
src/tasks/: arcdps_check_task.py  clean_channel_task.py  reload_cogs_task.py  stat_updater_task.py
src/views/: set_config_view.py  set_multi_config_view.py
