[tool.poetry]
name = "arxbot"
version = "0.1.0"
description = "Yet Another GW2 Discord Bot"
authors = ["harasho"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.1"
peewee = "^3.17.5"
requests = "^2.32.2"
aiohttp = "^3.9.5"
tabulate = "^0.9.0"
peewee-migrate = "^1.12.2"
asyncio = "^3.4.3"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
